Fixed problem with unequal gaps

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  padding: 1em;
-  padding-top: 0;
+  margin-top: -1em;
+  margin-left: -1em;
+  padding: 0 1em;
 }
